# gpt2-rs

./: Cargo.toml  README.md
python/: gpt.py  gpt2_model_converter.py  requirements.txt
src/: gpt.rs  main.rs  nn.rs  tokenizer.rs
