[package]
name = "gpt2-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.15"
byteorder = "1.5"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.9.2"
ndarray-rand = "0.16.0"
